--- a/user/index.html
+++ b/user/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="description" content="JanManch is a digital platform bridging the gap between citizens and their local representatives. Stay updated with development projects, raise grievances with geolocation, and engage in transparent governance.">
     <title>Janmanch</title>
     <link rel="icon" href="src/images/janmanch_logo.png" type="image/icon type">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
